JPF configuration improvements

--- a/.jpf/site.properties
+++ b/.jpf/site.properties
@@ -1,3 +1,7 @@
 # JPF site configuration
 
 jpf-core = ${user.home}/Documents/NetBeansProjects/JPF_CORE/jpf-core
+
+#jpf-symbc = ${user.home}/Documents/NetBeansProjects/JPF_CORE/jpf-symbc
+
+#extensions+=,${jpf-symbc} 
